# blob

./: .gitignore  .hgignore  CMakeLists.txt  Classifier.py  CoherentPointDriftMatcher.py  ConfigCreator.py  DemoClassifier.py  DemoEdgeDetector.py  EdgeDetector.py  FileImageReader.py  ImageUtilities.py  TestCxxCoherentPointDriftMatcher2D.py  TestCxxMostPopulatedCircleFinder.py  TestCxxSimulatedAnnealingPointMatcher2D.py  TestEdgeDetector.py  TestUtilities.py  TryClassifier.py  TryEdgeDetector.py  TryMatch.py  createConfig.py  main.py  prepare.sh  runTests.sh  tryCxxPointDriftMatcher.py
cxx/: CMakeLists.txt  CxxMostPopulatedCircleFinder.py  CxxPointMatcher.py  CxxSimulatedAnnealingPointMatcher.py
cxx/src/: CoherentPointDriftMatcher2D.cpp  CoherentPointDriftMatcher2D.hpp  CoherentPointDriftMatcher2DImpl.cpp  CoherentPointDriftMatcher2DImpl.hpp  EigenDefs.hpp  MeanShortestDistanceFitnessComputer.cpp  MeanShortestDistanceFitnessComputer.hpp  MeanShortestDistanceFitnessComputerTest.cpp  MostPopulatedCircleFinder.cpp  MostPopulatedCircleFinder.hpp  MostPopulatedCircleFinderTest.cpp  RigidSolver.cpp  RigidSolver.hpp  SimulatedAnnealingPointMatcher2D.cpp  SimulatedAnnealingPointMatcher2D.hpp  TestUtilities.hpp  Utilities.cpp  Utilities.hpp  VariablesHandler.cpp  VariablesHandler.hpp  VariablesHandlerTest.cpp
cxx/src/api/: CoherentPointDriftMatcher2D.cpp  CoherentPointDriftMatcher2D.hpp
images/: early_tests_white_01.config  early_tests_white_all.config
resource/: cloud_white_d6_basic2_1.json  cloud_white_d6_basic2_2.json  cloud_white_d6_basic2_3.json  cloud_white_d6_basic2_4.json  cloud_white_d6_basic2_5.json  cloud_white_d6_basic2_6.json  cloud_white_d6_basic_1.json  cloud_white_d6_basic_2.json  cloud_white_d6_basic_3.json  cloud_white_d6_basic_4.json  cloud_white_d6_basic_5.json  cloud_white_d6_basic_6.json  image_grabber_directory_early_tests_white.json  pipeline_white_d6_basic.json  pipeline_white_d6_basic_2.json  result_handler_print_result_basic.json
resource/demo/: 1_with_edges_0.json  1_with_edges_1.json
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/cxx/: AbsoluteNeighborFitnessComputer.cpp  AbsoluteNeighborFitnessComputer.hpp  BruteForceMatcher.cpp  BruteForceMatcher.hpp  CMakeLists.txt  CoherentPointDriftMatcher2D.cpp  CoherentPointDriftMatcher2D.hpp  EigenDefs.hpp  FitnessComputer.hpp  MeanShortestDistanceFitnessComputer.cpp  MeanShortestDistanceFitnessComputer.hpp  MostPopulatedCircleFinder.cpp  MostPopulatedCircleFinder.hpp  Random.hpp  RigidSolver.hpp  SimulatedAnnealingPointMatcher2D.cpp  SimulatedAnnealingPointMatcher2D.hpp  Utilities.cpp  Utilities.hpp  VariablesHandler.cpp
src/main/python/: BruteForceMatcherStage.py  CMakeLists.txt  Classifier.py  ClassifierPipelineCreator.py  CoherentPointDriftMatcher.py  ConfigCreator.py  DirectoryImageReader.py  EdgeDetectionConfig.py  EdgeDetector.py  FileImageReader.py  FractionPointRemoverStage.py  GpioPinHandler.py  ImageGrabber.py  ImageGrid.py  ImageGridWidget.py  ImageProcessingPipeline.py  ImageTableModel.py  ImageUtilities.py  JsonPipelineParser.py  PipelineStage.py  PointCloud.py  PointCloudCreator.py  PointCloudHandler.py  PointUtilities.py  QImageUtilities.py  ReferenceImage.py  ResultHandler.py  TopologyEditorWidget.py
src/main/swig/: AbsoluteNeighborFitnessComputer.i  BruteForceMatcher.i  CMakeLists.txt  CoherentPointDriftMatcher2D.i  MeanShortestDistanceFitnessComputer.i  MostPopulatedCircleFinder.i  SimulatedAnnealingPointMatcher2D.i
src/script/: CMakeLists.txt  DemoBruteForceMatcher.py  DemoCamera.py  DemoClassifier.py  DemoColorFilter.py  DemoEdgeDetector.py  DemoMatch.py  DemoSimpleThrow.py  QtConfigCreator.py  createConfig.py  main.py  wrapper.sh
src/test/: CMakeLists.txt
src/test/cxx/: AbsoluteNeighborFitnessComputerTest.cpp  CMakeLists.txt  MeanShortestDistanceFitnessComputerTest.cpp  MostPopulatedCircleFinderTest.cpp  VariablesHandlerTest.cpp  test.cpp
src/test/performance/: CMakeLists.txt  TestBruteForceMatcherPerformance.py  runPerformanceTests.sh
src/test/python/: CMakeLists.txt  TestAbsoluteNeighborFitnessComputer.py  TestBruteForceMatcher.py  TestCoherentPointDriftMatcher2D.py  TestEdgeDetector.py  TestImageUtilities.py  TestMostPopulatedCircleFinder.py  TestPointCloud.py  TestPointCloudHandler.py  TestSimulatedAnnealingPointMatcher2D.py  TestUtilities.py  runUnitTests.sh
